# rust-cat-reminder

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
src/: discovery.rs  led.rs  main.rs  mdns.rs  network.rs  protocol.rs  reminder.rs  transport.rs
