[package]
name = "cat-litter-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.17"
rs_ws281x = "0.4.4"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.8.1"
actix = "0.13.0"
gpiod = "0.2.2"
message-io = "0.14.6"
serde = "1.0.148"
bincode = "1.3.3"
take_mut = "0.2.2"