[package]
name = "cat-litter-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.20"
env_logger = "0.11.0"
rs_ws281x = "0.5.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.5"
gpiod = "0.2.3"
mdns-sd = "0.10.3"
local-ip-address = "0.5.6"
gethostname = "0.4.3"
random_name_generator = "0.3.6"
message-io = "0.18.0"
serde = "1.0.195"
bincode = "1.3.3"
signal-hook = "0.3.17"